Finish the general layout

--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@
       </div>
 
       <div class="side">
-        <p>Announcements</p>
         <div class="announcements">
+          <!-- <p>Announcements</p> -->
           <div class="anc1">
             <p>Site Maintenance</p>
             <p>bla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla bla</p>
+            <span></span>
           </div>
           <div class="anc2">
             <p>Community Share Day</p>
@@ -130,31 +131,42 @@
         </div>
   
         <div class="trending">
-          <p>Trending</p>
+          <!-- <p>Trending</p> -->
           <div class="morp">
             <img src="icons/morpheus.png" alt="morpheus-icon">
-            <p>@morpheus</p>
-            <p>The Primordial Greek god of dreams</p>
+            <div>
+              <p>@morpheus</p>
+              <p>The Primordial Greek god of dreams</p>
+            </div>
           </div>
           <div class="trinity">
             <img src="icons/trinity.png" alt="trinity-icon">
-            <p>@trinity</p>
-            <p>The unity of Father, Son, and Holy Spirit</p>
+            <div>
+              <p>@trinity</p>
+              <p>The unity of Father, Son, and Holy Spirit</p>
+            </div>
           </div>
           <div class="agent">
             <img src="icons/agent.png" alt="agent-icon">
-            <p>@agent</p>
-            <p>The main antagonist of the trilogy</p>
+            <div>
+              <p>@agent</p>
+              <p>The main antagonist of the trilogy</p>
+            </div>
           </div>
           <div class="walter">
             <img src="icons/walter-white.png" alt="walter-icon">
-            <p>@heisenberg</p>
-            <p>Walter Hartwell "Walt" White Sr.</p>
+            <div>
+              <p>@heisenberg</p>
+              <p>Walter Hartwell "Walt" White Sr.</p>
+            </div>
           </div>
       </div>
 
       </div>
     </div>
+  </div>
+  <div class="footer">
+    <p style="text-align:center;background-color:black;color:aliceblue;">by @ahmetacr</p>
   </div>
 </body>
 </html>
